# mindwork

./: Makefile  README.md
.claude-plugin/: marketplace.json  plugin.json
config/: README.md  goals.example.md  mindwork.example.yaml  profile.example.md
skills/analyze/: SKILL.md
skills/insights/: SKILL.md
skills/progress/: SKILL.md
skills/summary/: SKILL.md
skills/transcribe/: SKILL.md
transcribe/: .dockerignore  Dockerfile  audio_chunker.py  pyproject.toml
